fix(ui): reposition audio player on mobile, shrink native app font size

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -689,10 +689,6 @@ video {
   bottom: 1.25rem;
 }
 
-.bottom-6 {
-  bottom: 1.5rem;
-}
-
 .bottom-full {
   bottom: 100%;
 }
@@ -725,10 +721,6 @@ video {
   right: 1.25rem;
 }
 
-.right-6 {
-  right: 1.5rem;
-}
-
 .top-0 {
   top: 0px;
 }
@@ -739,6 +731,10 @@ video {
 
 .top-3 {
   top: 0.75rem;
+}
+
+.top-4 {
+  top: 1rem;
 }
 
 .top-6 {
@@ -4235,12 +4231,28 @@ video {
     inset: auto;
   }
 
+  .sm\:bottom-6 {
+    bottom: 1.5rem;
+  }
+
   .sm\:left-1\/2 {
     left: 50%;
   }
 
+  .sm\:left-auto {
+    left: auto;
+  }
+
+  .sm\:right-6 {
+    right: 1.5rem;
+  }
+
   .sm\:top-1\/2 {
     top: 50%;
+  }
+
+  .sm\:top-auto {
+    top: auto;
   }
 
   .sm\:my-8 {
@@ -4291,6 +4303,11 @@ video {
 
   .sm\:-translate-y-1\/2 {
     --tw-translate-y: -50%;
+    transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+  }
+
+  .sm\:translate-x-0 {
+    --tw-translate-x: 0px;
     transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
   }
 
